# rocket-rust-demo

./: .env  .travis.yml  Cargo.toml  Dockerfile  Procfile  Rocket.toml  RustConfig  secure.json.enc
db/: db.sql
migrations/20160720150332_create_tasks_table/: down.sql  up.sql
src/: db.rs  game.rs  main.rs  schema.rs  task.rs  timeUtil.rs  timeUtilTest.rs  user.rs  wsServer.rs
static/: app.9a45a48bf9be12f82174.css  app.bundle.ac73d66c87264d5c567a.js  game.bundle.38a69e0e0661d79cd9fc.js  game.html  index.html  result.html
static/assets/models/basketball/: scene.gltf
static/assets/models/basketball_court_outdoor/: scene.gltf
static/vendors/: ad-wvr-creative-sdk-c37d29c94a.js
