[package]
name = "rust-demo-service"
version = "0.1.1"
authors = ["Chenghsien_wen <chenghsien_wen@htc.com>"]

[dependencies]
rocket = "0.3.16"
rocket_codegen = "0.3.16"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
ws = { version = "*", git = "https://github.com/housleyjk/ws-rs"}


[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
