[package]
name = "rust-demo-service"
version = "0.1.1"
authors = ["Chenghsien_wen <chenghsien_wen@htc.com>"]

[dependencies]
rocket = "0.3.16"
rocket_codegen = "0.3.16"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
ws = { version = "*", git = "https://github.com/housleyjk/ws-rs"}
diesel = { version = "<= 1.2", features = ["sqlite", "r2d2"] }
dotenv = "0.10"

[dev-dependencies]
parking_lot = {version = "0.6", features = ["nightly"]}
rand = "0.5"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "tera_templates"]
